--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,38 @@
-/BAMF_API/.vs
+# Build results
+bin/
+obj/
+
+# Visual Studio cache/options
+.vs/
+
+# User-specific files
+*.user
+*.suo
+*.userosscache
+*.sln.docstates
+
+# Visual Studio Code
+.vscode/
+
+# IIS Express
+.vsconfig
+*.vspscc
+*.vssscc
+
+# Logs
+*.log
+
+# NuGet
+*.nupkg
+*.snupkg
+*.nuget.props
+*.nuget.targets
+packages/
+
+# Rider
+.idea/
+
+# Others
+Thumbs.db
+ehthumbs.db
+Desktop.ini
