--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=BamfApiDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BamfApiDb;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Jwt": {
     "Issuer": "YourIssuer",
