--- a/.github/workflows/BAMFAPI20251117143800.yml
+++ b/.github/workflows/BAMFAPI20251117143800.yml
@@ -63,16 +63,16 @@ jobs:
 
     - name: Debug - Check secrets presence
       run: |
-        echo "Client ID present: ${{ secrets.AZUREAPPSERVICE_CLIENTID != '' }}"
+        echo "Client ID present: ${{ secrets.AZURE_CLIENT_ID != '' }}"
         echo "Tenant ID present: ${{ secrets.AZUREAPPSERVICE_TENANTID != '' }}"
-        echo "Subscription ID present: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID != '' }}"
+        echo "Subscription ID present: ${{ secrets.AZURE_SUBSCRIPTION_ID != '' }}"
     
     - name: Azure Login
       uses: azure/login@v2
       with:
-        client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
-        subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
     
     - name: Deploy to Azure WebApp
       uses: azure/webapps-deploy@v3
