--- a/.github/workflows/BAMFAPI20251117143800.yml
+++ b/.github/workflows/BAMFAPI20251117143800.yml
@@ -60,12 +60,6 @@ jobs:
       with:
         name: webapp
         path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-
-    - name: Debug - Check secrets presence
-      run: |
-        echo "Client ID present: ${{ secrets.AZURE_CLIENT_ID != '' }}"
-        echo "Tenant ID present: ${{ secrets.AZUREAPPSERVICE_TENANTID != '' }}"
-        echo "Subscription ID present: ${{ secrets.AZURE_SUBSCRIPTION_ID != '' }}"
     
     - name: Azure Login
       uses: azure/login@v2
@@ -73,7 +67,7 @@ jobs:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-    
+        
     - name: Deploy to Azure WebApp
       uses: azure/webapps-deploy@v3
       with:
@@ -81,7 +75,7 @@ jobs:
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
     
     - name: Import API into Azure API Management
-      run: az apim api import --path "${{ env.AZURE_APIM_RESOURCE_PATH }}" --resource-group "${{ env.AZURE_APIM_RESOURCEGROUP }}" --service-name "${{ env.AZURE_APIM_SERVICENAME }}" --api-id "${{ env.AZURE_APIM_API_ID }}" --service-url "${{ env.AZURE_APIM_APPSERVICEURL }}/swagger/v1/swagger.json" --specification-format OpenApi --subscription-required false
+      run: az apim api import --path "${{ env.AZURE_APIM_RESOURCE_PATH }}" --resource-group "${{ env.AZURE_APIM_RESOURCEGROUP }}" --service-name "${{ env.AZURE_APIM_SERVICENAME }}" --api-id "${{ env.AZURE_APIM_API_ID }}" --service-url "${{ env.AZURE_APIM_APPSERVICEURL }}" --specification-url "${{ env.AZURE_APIM_APPSERVICEURL }}/swagger/v1/swagger.json" --specification-format OpenApi --subscription-required false
     
     - name: logout
       run: az logout
