--- a/.github/workflows/BAMFAPI20251117143800.yml
+++ b/.github/workflows/BAMFAPI20251117143800.yml
@@ -4,11 +4,9 @@ on:
     branches:
     - main
   workflow_dispatch:
-
 permissions:
   id-token: write
   contents: read
-
 env:
   AZURE_WEBAPP_NAME: BAMFAPI20251117143800
   AZURE_WEBAPP_PACKAGE_PATH: .\publish
@@ -20,7 +18,6 @@ env:
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 8.0.x
   WORKING_DIRECTORY: .
-
 jobs:
   build:
     runs-on: windows-latest
@@ -44,12 +41,26 @@ jobs:
     - name: Publish
       run: dotnet publish ${{ env.WORKING_DIRECTORY }} --configuration ${{ env.CONFIGURATION }} --no-build --output ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
     
+    # Generate Swagger JSON file during build
+    - name: Generate Swagger JSON
+      run: |
+        dotnet tool install -g Swashbuckle.AspNetCore.Cli
+        dotnet swagger tofile --output swagger.json ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/BAMF_API.dll v1
+      continue-on-error: true
+    
     - name: Publish Artifacts
       uses: actions/upload-artifact@v4
       with:
         name: webapp
         path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-
+    
+    - name: Upload Swagger JSON
+      uses: actions/upload-artifact@v4
+      with:
+        name: swagger
+        path: swagger.json
+      if: always()
+      
   deploy:
     runs-on: windows-latest
     needs: build
@@ -60,6 +71,13 @@ jobs:
       with:
         name: webapp
         path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+    
+    - name: Download Swagger JSON
+      uses: actions/download-artifact@v4
+      with:
+        name: swagger
+        path: ./swagger
+      continue-on-error: true
     
     - name: Azure Login
       uses: azure/login@v2
@@ -75,7 +93,13 @@ jobs:
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
     
     - name: Import API into Azure API Management
-      run: az apim api import --path "${{ env.AZURE_APIM_RESOURCE_PATH }}" --resource-group "${{ env.AZURE_APIM_RESOURCEGROUP }}" --service-name "${{ env.AZURE_APIM_SERVICENAME }}" --api-id "${{ env.AZURE_APIM_API_ID }}" --service-url "${{ env.AZURE_APIM_APPSERVICEURL }}" --specification-url "${{ env.AZURE_APIM_APPSERVICEURL }}/swagger/v1/swagger.json" --specification-format OpenApi --subscription-required false
+      run: |
+        if (Test-Path "./swagger/swagger.json") {
+          az apim api import --path "${{ env.AZURE_APIM_RESOURCE_PATH }}" --resource-group "${{ env.AZURE_APIM_RESOURCEGROUP }}" --service-name "${{ env.AZURE_APIM_SERVICENAME }}" --api-id "${{ env.AZURE_APIM_API_ID }}" --service-url "${{ env.AZURE_APIM_APPSERVICEURL }}" --specification-path "./swagger/swagger.json" --specification-format OpenApi --subscription-required false
+        } else {
+          Write-Host "Swagger file not found, skipping API import"
+        }
+      shell: pwsh
     
     - name: logout
       run: az logout
