--- a/.github/workflows/BAMFAPI20251117143800.yml
+++ b/.github/workflows/BAMFAPI20251117143800.yml
@@ -1,26 +1,34 @@
-name: Build and deploy .NET Core application to Web App BAMFAPI20251117143800 with API Management Service BAMF-APIapi-BAMF-API
+name: Build and deploy .NET API to Azure
+
 on:
   push:
     branches:
-    - main
+      - main
   workflow_dispatch:
+
 permissions:
   id-token: write
   contents: read
+
 env:
   AZURE_WEBAPP_NAME: BAMFAPI20251117143800
-  AZURE_WEBAPP_PACKAGE_PATH: .\publish
+  AZURE_WEBAPP_PACKAGE_PATH: ./publish
   AZURE_APIM_RESOURCE_PATH: /
   AZURE_APIM_RESOURCEGROUP: BAMF-WEB
   AZURE_APIM_SERVICENAME: BAMF-APIapi
   AZURE_APIM_API_ID: BAMF-API
   AZURE_APIM_APPSERVICEURL: https://bamfapi20251117143800-h0hvfab3d5atffdq.germanywestcentral-01.azurewebsites.net
+
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 8.0.x
-  WORKING_DIRECTORY: .
+
+  WORKING_DIRECTORY: ./BAMF_API       # <-- FIXED
+  TEST_DIRECTORY: ./BAMF_TESTS        # <-- ADDED
+
 jobs:
   build:
     runs-on: windows-latest
+
     steps:
     - uses: actions/checkout@v4
     
@@ -28,78 +36,85 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
-    
+
     - name: Restore
-      run: dotnet restore ${{ env.WORKING_DIRECTORY }}
-    
+      run: dotnet restore BAMF_API.sln      # <-- safest universal option
+
     - name: Build
-      run: dotnet build ${{ env.WORKING_DIRECTORY }} --configuration ${{ env.CONFIGURATION }} --no-restore
-    
+      run: dotnet build BAMF_API.sln --configuration ${{ env.CONFIGURATION }} --no-restore
+
     - name: Test
-      run: dotnet test ${{ env.WORKING_DIRECTORY }} --no-build
-    
-    - name: Publish
+      run: dotnet test ${{ env.TEST_DIRECTORY }} --no-build
+
+    - name: Publish API project
       run: dotnet publish ${{ env.WORKING_DIRECTORY }} --configuration ${{ env.CONFIGURATION }} --no-build --output ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-    
-    # Generate Swagger JSON file during build
+
     - name: Generate Swagger JSON
       run: |
         dotnet tool install -g Swashbuckle.AspNetCore.Cli
         dotnet swagger tofile --output swagger.json ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/BAMF_API.dll v1
       continue-on-error: true
-    
+
     - name: Publish Artifacts
       uses: actions/upload-artifact@v4
       with:
         name: webapp
         path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-    
+
     - name: Upload Swagger JSON
       uses: actions/upload-artifact@v4
       with:
         name: swagger
         path: swagger.json
       if: always()
-      
+
   deploy:
     runs-on: windows-latest
     needs: build
-    
+
     steps:
-    - name: Download artifact from build job
+    - name: Download artifact
       uses: actions/download-artifact@v4
       with:
         name: webapp
         path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-    
+
     - name: Download Swagger JSON
       uses: actions/download-artifact@v4
       with:
         name: swagger
         path: ./swagger
       continue-on-error: true
-    
+
     - name: Azure Login
       uses: azure/login@v2
       with:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        
+
     - name: Deploy to Azure WebApp
       uses: azure/webapps-deploy@v3
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-    
-    - name: Import API into Azure API Management
+
+    - name: Import API into API Management
+      shell: pwsh
       run: |
         if (Test-Path "./swagger/swagger.json") {
-          az apim api import --path "${{ env.AZURE_APIM_RESOURCE_PATH }}" --resource-group "${{ env.AZURE_APIM_RESOURCEGROUP }}" --service-name "${{ env.AZURE_APIM_SERVICENAME }}" --api-id "${{ env.AZURE_APIM_API_ID }}" --service-url "${{ env.AZURE_APIM_APPSERVICEURL }}" --specification-path "./swagger/swagger.json" --specification-format OpenApi --subscription-required false
+          az apim api import `
+            --path "${{ env.AZURE_APIM_RESOURCE_PATH }}" `
+            --resource-group "${{ env.AZURE_APIM_RESOURCEGROUP }}" `
+            --service-name "${{ env.AZURE_APIM_SERVICENAME }}" `
+            --api-id "${{ env.AZURE_APIM_API_ID }}" `
+            --service-url "${{ env.AZURE_APIM_APPSERVICEURL }}" `
+            --specification-path "./swagger/swagger.json" `
+            --specification-format OpenApi `
+            --subscription-required false
         } else {
           Write-Host "Swagger file not found, skipping API import"
         }
-      shell: pwsh
-    
+
     - name: logout
       run: az logout
