--- a/.github/workflows/bamf-backend.yml
+++ b/.github/workflows/bamf-backend.yml
@@ -62,7 +62,11 @@ jobs:
     - name: Azure Login
       uses: azure/login@v2
       with:
-        creds: ${{ secrets.BAMFAPIapi_SPN }}
+                client-id: ${{ secrets.AZURE_CLIENT_ID }}
+    tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
+    subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}  
+
+
     - name: Deploy to Azure WebApp
       uses: azure/webapps-deploy@v2
       with:
