--- a/.github/workflows/bamf-backend.yml
+++ b/.github/workflows/bamf-backend.yml
@@ -1,56 +1,49 @@
-name: Build and deploy .NET Core application to Web App bamf-backend with API Management Service BAMFAPIapi-BAMFAPI
-
+name: Build and deploy .NET API to Azure
 on:
   push:
     branches:
-    - main
+      - main
+  workflow_dispatch:
 
-# Add this permissions block for OIDC authentication
 permissions:
   id-token: write
   contents: read
 
 env:
   AZURE_WEBAPP_NAME: bamf-backend
-  AZURE_WEBAPP_PACKAGE_PATH: BAMF_API\publish
+  AZURE_WEBAPP_PACKAGE_PATH: ./publish
   AZURE_APIM_RESOURCE_PATH: /
   AZURE_APIM_RESOURCEGROUP: bamf-web
   AZURE_APIM_SERVICENAME: BAMFAPIapi
   AZURE_APIM_API_ID: BAMFAPI
   AZURE_APIM_APPSERVICEURL: https://bamf-backend-h0dufqa6bmchc7g6.norwayeast-01.azurewebsites.net
-  SWASHBUCLE_ASPNET_CORE_CLI_PACKAGE_VERSION: 5.6.3
-  SWASHBUCKLE_DOTNET_CORE_VERSION: 3.1.x
-  API_IMPORT_SPECIFICATION_PATH: BAMF_API\publish\swagger.json
-  API_IMPORT_DLL: BAMF_API\bin\Release\net8.0\BAMF_API.dll
-  API_IMPORT_VERSION: v1
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 8.0.x
-  WORKING_DIRECTORY: BAMF_API
+  WORKING_DIRECTORY: ./
 
 jobs:
   build:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v4
+    
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
-    - name: Setup SwashBuckle .NET Core
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: ${{ env.SWASHBUCKLE_DOTNET_CORE_VERSION }}
+    
     - name: Restore
-      run: dotnet restore ${{ env.WORKING_DIRECTORY }}
+      run: dotnet restore BAMF_API.sln
+    
     - name: Build
-      run: dotnet build ${{ env.WORKING_DIRECTORY }} --configuration ${{ env.CONFIGURATION }} --no-restore
+      run: dotnet build BAMF_API.sln --configuration ${{ env.CONFIGURATION }} --no-restore
+    
     - name: Test
       run: dotnet test ${{ env.WORKING_DIRECTORY }} --no-build
-    - name: Publish
+    
+    - name: Publish API project
       run: dotnet publish ${{ env.WORKING_DIRECTORY }} --configuration ${{ env.CONFIGURATION }} --no-build --output ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-    - name: Install Swashbuckle CLI .NET Global Tool
-      run: dotnet tool install --global Swashbuckle.AspNetCore.Cli --version ${{ env.SWASHBUCLE_ASPNET_CORE_CLI_PACKAGE_VERSION }}
-      working-directory: ${{ env.WORKING_DIRECTORY }}
+    
     - name: Publish Artifacts
       uses: actions/upload-artifact@v4
       with:
@@ -61,21 +54,24 @@ jobs:
     runs-on: windows-latest
     needs: build
     steps:
-    - name: Download artifact from build job
+    - name: Download artifact
       uses: actions/download-artifact@v4
       with:
         name: webapp
         path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+    
     - name: Azure Login
       uses: azure/login@v2
       with:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+    
     - name: Deploy to Azure WebApp
-      uses: azure/webapps-deploy@v2
+      uses: azure/webapps-deploy@v3
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+    
     - name: logout
       run: az logout
